discussion/kv_engine/167923/167923_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Remove unnecessary virtual inheritance in DCPBackfillBySeqno

DCPBackfillBySeqno does not need to be a child of DCPBackfill, it
only declares the common data for a seqno "range" backfill.

Change-Id: I1113223cc635b1e4ca47556a04d5cde4d8bc029c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-12-20 13:23:45.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-12-20 13:43:29.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36051/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/backfill_memory.h:25:42:
error: expected class name
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36051/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42522/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\dcp/backfill_memory.h(25): error C2504: "DCPBackfill": base class undefined ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42522/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14594/ : FAILURE

clang-tidy found the following problems:

<pre>
error: too many errors emitted, stopping now [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_memory.cc:31:7: error: member initializer "DCPBackfill" does not name a non-static data member or base class [clang-diagnostic-error]
    : DCPBackfill(s),
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_memory.cc:52:1: error: unknown type name "backfill_status_t"; did you mean "backfill_source_t"? [clang-diagnostic-error]
backfill_status_t DCPBackfillMemoryBuffered::run() {
^~~~~~~~~~~~~~~~~
backfill_source_t
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/stream.h:35:6: note: "backfill_source_t" declared here
enum backfill_source_t {
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_memory.cc:61:17: error: use of undeclared identifier "getVBucketId" [clang-diagnostic-error]
                getVBucketId(),
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_memory.cc:64:16: error: use of undeclared identifier "backfill_finished" [clang-diagnostic-error]
        return backfill_finished;
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_memory.cc:69:17: error: use of undeclared identifier "runtime" [clang-diagnostic-error]
                runtime += (std::chrono::steady_clock::now() - start);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_memory.cc:85:16: error: use of undeclared identifier "backfill_finished" [clang-diagnostic-error]
        return backfill_finished;
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_memory.cc:98:1: error: unknown type name "backfill_status_t"; did you mean "backfill_source_t"? [clang-diagnostic-error]
backfill_status_t DCPBackfillMemoryBuffered::create() {
^~~~~~~~~~~~~~~~~
backfill_source_t
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/stream.h:35:6: note: "backfill_source_t" declared here
enum backfill_source_t {
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_memory.cc:104:19: error: use of undeclared identifier "streamPtr" [clang-diagnostic-error]
    auto stream = streamPtr.lock();
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_memory.cc:110:17: error: use of undeclared identifier "getVBucketId" [clang-diagnostic-error]
                getVBucketId());
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_memory.cc:112:16: error: use of undeclared identifier "backfill_finished" [clang-diagnostic-error]
        return backfill_finished;
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_memory.cc:127:25: error: use of undeclared identifier "getVBucketId" [clang-diagnostic-error]
                        getVBucketId());
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_memory.cc:128:20: error: use of undeclared identifier "backfill_snooze" [clang-diagnostic-error]
            return backfill_snooze;
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_memory.cc:134:21: error: use of undeclared identifier "getVBucketId" [clang-diagnostic-error]
                    getVBucketId());
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_memory.h:25:42: error: expected class name [clang-diagnostic-error]
class DCPBackfillMemoryBuffered : public DCPBackfill,
                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_memory.h:33:34: error: only virtual member functions can be marked "override" [clang-diagnostic-error]
    ~DCPBackfillMemoryBuffered() override;
                                 ^~~~~~~~
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_memory.h:35:5: error: unknown type name "backfill_status_t" [clang-diagnostic-error]
    backfill_status_t run() override;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_memory.h:37:19: error: only virtual member functions can be marked "override" [clang-diagnostic-error]
    void cancel() override;
                  ^~~~~~~~
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_memory.h:49:5: error: unknown type name "backfill_status_t" [clang-diagnostic-error]
    backfill_status_t create();
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_memory.h:56:5: error: unknown type name "backfill_status_t" [clang-diagnostic-error]
    backfill_status_t scan();
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14594/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_memory.cc:31:7:
error: member initializer "DCPBackfill" does not name a non-static data member or base class [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14594/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4292/ : FAILURE

Compile error at [2021-12-20T13:41:06.901Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/engines/ep/src/dcp/backfill_memory.h:25:53:
error: expected class-name before ?,? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4292/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16238/ : FAILURE

Compile error at [2021-12-20T13:39:03.847Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/dcp/backfill_memory.h:25:53:
error: expected class-name before ?,? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16238/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17312/ : FAILURE

Compile error at [2021-12-20T13:39:51.629Z] ../kv_engine/engines/ep/src/dcp/backfill_memory.h:25:42:
error: expected class name
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17312/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24648/ : FAILURE

Compile error at [2021-12-20T13:41:46.089Z] ../kv_engine/engines/ep/src/dcp/backfill_memory.h:25:42:
error: expected class name
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24648/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4234/ : FAILURE

Compile error at [2021-12-20T13:40:47.384Z] ../kv_engine/engines/ep/src/dcp/backfill_memory.h:25:42:
error: expected class name
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4234/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16532/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15394/ : FAILURE

Compile error at [2021-12-20T13:40:42.602Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/dcp/backfill_memory.h:25:42:
error: expected class name
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15394/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13424/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
